force-app/main/default/objects/Product2/fields/Aguardando_recebimento__c.field-meta.xml
<CustomField>
    <fullName>Aguardando_recebimento__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Aguardando recebimento</label>
    <precision>10</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>