force-app/main/default/objects/Product2/fields/Ativo_na_Loja__c.field-meta.xml
<CustomField>
    <fullName>Ativo_na_Loja__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ativo na Loja</label>
    <type>Checkbox</type>
</CustomField>