force-app/main/default/objects/Product2/fields/Ativo_no_commerce__c.field-meta.xml
<CustomField>
    <fullName>Ativo_no_commerce__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo de controle para exibir o produto no commerce</description>
    <inlineHelpText>Quando marcado, se existir entrada no catálogo de preços E-commerce, habilitará o produto para venda no E-commerce</inlineHelpText>
    <label>Ativo no E-commerce</label>
    <type>Checkbox</type>
</CustomField>