force-app/main/default/objects/Product2/fields/Centro_de_costo__c.field-meta.xml
<CustomField>
    <fullName>Centro_de_costo__c</fullName>
    <description>Centro de custo do produto</description>
    <inlineHelpText>Centro de custo do produto</inlineHelpText>
    <label>Centro de custo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>