force-app/main/default/objects/Product2/fields/Cod_Hospcom_c__c.field-meta.xml
<CustomField>
    <fullName>Cod_Hospcom_c__c</fullName>
    <description>codigo hospcom</description>
    <formula>StockKeepingUnit</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>codigo hospcom</inlineHelpText>
    <label>Cod_Hospcom__c</label>
    <type>Text</type>
</CustomField>