force-app/main/default/objects/Product2/fields/Cofins__c.field-meta.xml
<CustomField>
    <fullName>Cofins__c</fullName>
    <label>COFINS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>