force-app/main/default/objects/Product2/fields/Compra_sugerida__c.field-meta.xml
<CustomField>
    <fullName>Compra_sugerida__c</fullName>
    <formula>IF( 
Media_de_saida_em_6_meses__c + Quantidade_em_negocacao_OT__c +  Estoque_minimo__c -  Aguardando_recebimento__c - (Estoque_disponivel__c - Vendido_e_nao_entregue__c) &gt; 0,  
Media_de_saida_em_6_meses__c + Quantidade_em_negocacao_OT__c +  Estoque_minimo__c -  Aguardando_recebimento__c - (Estoque_disponivel__c - Vendido_e_nao_entregue__c), Estoque_minimo__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compra sugerida</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>