force-app/main/default/objects/Product2/fields/Comprimento__c.field-meta.xml
<CustomField>
    <fullName>Comprimento__c</fullName>
    <label>Comprimento (cm)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>