force-app/main/default/objects/Product2/fields/Custo_Negociado__c.field-meta.xml
<CustomField>
    <fullName>Custo_Negociado__c</fullName>
    <label>Custo (Negociado)</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>