force-app/main/default/objects/Product2/fields/Custo_Tabela__c.field-meta.xml
<CustomField>
    <fullName>Custo_Tabela__c</fullName>
    <label>Custo (Tabela)</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>