force-app/main/default/objects/Product2/fields/de_IPI_do_Produto__c.field-meta.xml
<CustomField>
    <fullName>de_IPI_do_Produto__c</fullName>
    <label>% de IPI do Produto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>