force-app/main/default/objects/Product2/fields/Descri_o_Estrangeira__c.field-meta.xml
<CustomField>
    <fullName>Descri_o_Estrangeira__c</fullName>
    <label>Descrição Estrangeira</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>