force-app/main/default/objects/Product2/fields/Descritivo_de_Importacao__c.field-meta.xml
<CustomField>
    <fullName>Descritivo_de_Importacao__c</fullName>
    <inlineHelpText>Campo descritivo para geração da D.I.</inlineHelpText>
    <label>Descritivo de Importação</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>