force-app/main/default/objects/Product2/fields/Elegivel_para_demo_rapida__c.field-meta.xml
<CustomField>
    <fullName>Elegivel_para_demo_rapida__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Elegível para demo rápida</label>
    <type>Checkbox</type>
</CustomField>