force-app/main/default/objects/Product2/fields/Especialidade__c.field-meta.xml
<CustomField>
    <fullName>Especialidade__c</fullName>
    <label>Especialidade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Artroplastia</fullName>
            </value>
            <value>
                <fullName>ORTOPEDIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>