force-app/main/default/objects/Product2/fields/Fornecedor__c.field-meta.xml
<CustomField>
    <fullName>Fornecedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fornecedor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Produtos</relationshipLabel>
    <relationshipName>Produtos</relationshipName>
    <type>Lookup</type>
</CustomField>