force-app/main/default/objects/Product2/fields/Imagem_large__c.field-meta.xml
<CustomField>
    <fullName>Imagem_large__c</fullName>
    <formula>IF( 
OR(ISBLANK(URL_da_Imagem__c), NOT(CONTAINS(URL_da_Imagem__c, &quot;hospcom&quot;))), 
IMAGE(&quot;https://hospcom--c.na49.content.force.com/servlet/servlet.ImageServer?id=015310000080hog&amp;oid=00Di0000000JVhH&amp;lastMod=1502888568000&quot; , &quot;&quot;, 200,200), 
IMAGE(URL_da_Imagem__c , &quot;&quot;, 200,200) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagem*</label>
    <type>Text</type>
</CustomField>