force-app/main/default/objects/Product2/fields/Integra_o_SAP__c.field-meta.xml
<CustomField>
    <fullName>Integra_o_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>VERIFICA SE ESTÁ MARCADO SE ESTIVER MARCADO, VAI INTEGRAR O PRODUTO NO SAP</description>
    <inlineHelpText>VERIFICA SE ESTÁ MARCADO SE ESTIVER MARCADO, VAI INTEGRAR O PRODUTO NO SAP</inlineHelpText>
    <label>Integração SAP</label>
    <type>Checkbox</type>
</CustomField>