force-app/main/default/objects/Product2/fields/Integrado__c.field-meta.xml
<CustomField>
    <fullName>Integrado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integrado</label>
    <type>Checkbox</type>
</CustomField>