force-app/main/default/objects/Product2/fields/Integrated__c.field-meta.xml
<CustomField>
    <fullName>Integrated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integrated</label>
    <type>Checkbox</type>
</CustomField>