force-app/main/default/objects/Product2/fields/IPI__c.field-meta.xml
<CustomField>
    <fullName>IPI__c</fullName>
    <description>Imposto sobre Produtos Industrializados</description>
    <inlineHelpText>Imposto sobre Produtos Industrializados</inlineHelpText>
    <label>IPI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>