force-app/main/default/objects/Product2/fields/Largura_cm__c.field-meta.xml
<CustomField>
    <fullName>Largura_cm__c</fullName>
    <label>Largura (cm)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>