force-app/main/default/objects/Product2/fields/Linha__c.field-meta.xml
<CustomField>
    <fullName>Linha__c</fullName>
    <label>Linha</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>APOIO A MOBILIDADE</fullName>
                <isActive>false</isActive>
                <label>APOIO A MOBILIDADE</label>
            </value>
            <value>
                <fullName>CAMAS HOSPITALARES</fullName>
            </value>
            <value>
                <fullName>CIRURGIA MINIMAMENTE INVASIVA</fullName>
            </value>
            <value>
                <fullName>CIRURGIA ROBÓTICA</fullName>
            </value>
            <value>
                <fullName>CUIDADOS PESSOAIS</fullName>
                <isActive>false</isActive>
                <label>CUIDADOS PESSOAIS</label>
            </value>
            <value>
                <fullName>ELETROCIRURGIA</fullName>
            </value>
            <value>
                <fullName>ENDOSCOPIA</fullName>
            </value>
            <value>
                <fullName>ESTERILIZACAO</fullName>
                <isActive>false</isActive>
                <label>ESTERILIZACAO</label>
            </value>
            <value>
                <fullName>IMAGEM</fullName>
                <isActive>false</isActive>
                <label>IMAGEM</label>
            </value>
            <value>
                <fullName>IMAGEM RAIO-X</fullName>
            </value>
            <value>
                <fullName>IMAGEM ULTRASSOM</fullName>
            </value>
            <value>
                <fullName>INFUSÃO</fullName>
                <isActive>false</isActive>
                <label>INFUSÃO</label>
            </value>
            <value>
                <fullName>LABORATORIAL</fullName>
            </value>
            <value>
                <fullName>MONITORES DE GRAU MEDICO</fullName>
            </value>
            <value>
                <fullName>NEONATOLOGIA</fullName>
            </value>
            <value>
                <fullName>OPME</fullName>
            </value>
            <value>
                <fullName>OUTROS</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>PMLS</fullName>
            </value>
            <value>
                <fullName>SURGICAL</fullName>
            </value>
            <value>
                <fullName>VETERINÁRIA</fullName>
                <isActive>false</isActive>
                <label>VETERINÁRIA</label>
            </value>
            <value>
                <fullName>VETERINÁRIA IVD</fullName>
            </value>
            <value>
                <fullName>VETERINÁRIA MIS</fullName>
            </value>
            <value>
                <fullName>VETERINÁRIA PMLS</fullName>
            </value>
            <value>
                <fullName>VIAS AÉREAS DIFÍCEIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>