force-app/main/default/objects/Product2/fields/Link_Produto__c.field-meta.xml
<CustomField>
    <fullName>Link_Produto__c</fullName>
    <formula>HYPERLINK(
    &quot;https://hospcom.my.site.com/Sales/s/product2/&quot; &amp; Id,
    &quot;Ver Produto&quot;,
    &quot;_blank&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link Produto</label>
    <type>Text</type>
</CustomField>