force-app/main/default/objects/Product2/fields/Media_de_saida_em_6_meses__c.field-meta.xml
<CustomField>
    <fullName>Media_de_saida_em_6_meses__c</fullName>
    <formula>Saidas_em_6_meses__c / 6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Média de saída em 6 meses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>