force-app/main/default/objects/Product2/fields/NCM_do_Produto__c.field-meta.xml
<CustomField>
    <fullName>NCM_do_Produto__c</fullName>
    <label>NCM do Produto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>