force-app/main/default/objects/Product2/fields/Nome_Estendido__c.field-meta.xml
<CustomField>
    <fullName>Nome_Estendido__c</fullName>
    <formula>Name + &quot; &quot; + Modelo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Campo fórmula que combina o Nome + Modelo do produto</inlineHelpText>
    <label>Nome Estendido</label>
    <type>Text</type>
</CustomField>