force-app/main/default/objects/Product2/fields/Nome_estrangeiro__c.field-meta.xml
<CustomField>
    <fullName>Nome_estrangeiro__c</fullName>
    <inlineHelpText>Nome traduzido com o auxílio de I.A.</inlineHelpText>
    <label>Nome Estrangeiro</label>
    <type>TextArea</type>
</CustomField>