force-app/main/default/objects/Product2/fields/Posicao_no_Estoque_153__c.field-meta.xml
<CustomField>
    <fullName>Posicao_no_Estoque_153__c</fullName>
    <label>Posição no Estoque 153</label>
    <length>255</length>
    <type>Text</type>
</CustomField>