force-app/main/default/objects/Product2/fields/PosicaoEstoque__c.field-meta.xml
<CustomField>
    <fullName>PosicaoEstoque__c</fullName>
    <label>Posição no estoque</label>
    <length>255</length>
    <type>Text</type>
</CustomField>