force-app/main/default/objects/Product2/fields/Qtd_Aguardando_Recebimento__c.field-meta.xml
<CustomField>
    <fullName>Qtd_Aguardando_Recebimento__c</fullName>
    <label>Qtd Aguardando Recebimento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>