force-app/main/default/objects/Product2/fields/Quantidade_bonificada__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_bonificada__c</fullName>
    <label>Quantidade bonificada</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>