force-app/main/default/objects/Product2/fields/Quantidade_em_Estoque_Oficial__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_em_Estoque_Oficial__c</fullName>
    <label>Quantidade em Estoque Oficial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>