force-app/main/default/objects/Product2/fields/Quantidade_em_negocacao_OT__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_em_negocacao_OT__c</fullName>
    <label>Quantidade em negocação (OT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>