force-app/main/default/objects/Product2/fields/Subespecialidade__c.field-meta.xml
<CustomField>
    <fullName>Subespecialidade__c</fullName>
    <label>Subespecialidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joelho</fullName>
            </value>
            <value>
                <fullName>ARTROPLASTIA</fullName>
            </value>
            <value>
                <fullName>GERAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>