force-app/main/default/objects/Product2/fields/Total_aguardando_entrega_transicional__c.field-meta.xml
<CustomField>
    <fullName>Total_aguardando_entrega_transicional__c</fullName>
    <formula>Qtd_Aguardando_Recebimento__c +  Aguardando_recebimento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total aguardando entrega (transicional)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>