force-app/main/default/objects/Product2/fields/Unidade_de_medida__c.field-meta.xml
<CustomField>
    <fullName>Unidade_de_medida__c</fullName>
    <label>Unidade de medida</label>
    <length>255</length>
    <type>Text</type>
</CustomField>