force-app/main/default/objects/Product2/fields/Unidade_de_medida_de_venda__c.field-meta.xml
<CustomField>
    <fullName>Unidade_de_medida_de_venda__c</fullName>
    <label>Unidade de medida de venda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>