force-app/main/default/objects/Product2/fields/Unidade_de_medida_do_estoque__c.field-meta.xml
<CustomField>
    <fullName>Unidade_de_medida_do_estoque__c</fullName>
    <label>Unidade de medida do estoque</label>
    <length>255</length>
    <type>Text</type>
</CustomField>