force-app/main/default/objects/Product2/fields/URL_da_Imagem__c.field-meta.xml
<CustomField>
    <fullName>URL_da_Imagem__c</fullName>
    <defaultValue>&quot;https://hospcom.my.site.com/servlet/servlet.ImageServer?id=015310000080hog&amp;oid=00Di0000000JVhH&amp;lastMod=1502888568000&quot;</defaultValue>
    <label>URL da Imagem</label>
    <type>Url</type>
</CustomField>