force-app/main/default/objects/Product2/fields/validade_preventiva__c.field-meta.xml
<CustomField>
    <fullName>validade_preventiva__c</fullName>
    <inlineHelpText>Validade da manutenção preventiva em meses</inlineHelpText>
    <label>Validade preventiva (meses)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>12</fullName>
                <default>true</default>
                <label>12</label>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>