force-app/main/default/objects/Product2/fields/Valor_de_Venda__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_Venda__c</fullName>
    <label>Valor de Venda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>