force-app/main/default/objects/Product2/fields/Valor_de_Venda_USD__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_Venda_USD__c</fullName>
    <label>Valor de Venda (USD)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>