force-app/main/default/objects/Product2/validationRules/Aspas_duplas.validationRule-meta.xml
<ValidationRule>
    <fullName>Aspas_duplas</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
!isNew(),
CONTAINS(Description , &apos;&quot;&apos;)
)</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>O caractere &quot; (aspas duplas) não é aceito no campo descrição. Por favor, substitua por duas aspas simples.</errorMessage>
</ValidationRule>