force-app/main/default/objects/Product2/validationRules/Codigo_alterado.validationRule-meta.xml
<ValidationRule>
    <fullName>Codigo_alterado</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(StockKeepingUnit)</errorConditionFormula>
    <errorDisplayField>StockKeepingUnit</errorDisplayField>
    <errorMessage>Código Hospcom não é editável.</errorMessage>
</ValidationRule>