force-app/main/default/objects/Product2/validationRules/Qtd_negativa.validationRule-meta.xml
<ValidationRule>
    <fullName>Qtd_negativa</fullName>
    <active>true</active>
    <errorConditionFormula>Aguardando_recebimento__c &lt; 0</errorConditionFormula>
    <errorMessage>Quantidade em recebimento não pode ser negativa.</errorMessage>
</ValidationRule>