force-app/main/default/objects/Product2/listViews/Tdos_os_Produtos.listView-meta.xml
<ListView>
    <fullName>Tdos_os_Produtos</fullName>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Marca__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>Valor_de_Venda__c</columns>
    <columns>Valor_de_Venda_USD__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos os Produtos</label>
</ListView>