force-app/main/default/objects/Product2/listViews/Teste_site.listView-meta.xml
<ListView>
    <fullName>Teste_site</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>URL_da_Imagem__c</columns>
    <columns>Imagem_large__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>URL_da_Imagem__c</field>
        <operation>notContain</operation>
        <value>https://hospcom--c.na49.content.force.com/servlet/servlet.ImageServer?id=0153100</value>
    </filters>
    <label>Teste site</label>
</ListView>